# bro-engine

./: .gitignore  COLLABORATION_NOTES.md  DISCOVERY.md  EDGES_PLANNING.md  HERMIT_CRAB_SUCCESS_CRITERIA_FOR_BRO.txt  LICENSE  PLAN.md  README.md  pyproject.toml  seed_decision_log.py  seed_moments.py
.claude/skills/close/: SKILL.md
.claude/skills/commit/: SKILL.md
.claude/skills/flow/: SKILL.md
.claude/skills/infer/: SKILL.md
.claude/skills/pressure/: SKILL.md
.claude/skills/transition/: SKILL.md
bro_engine/: __init__.py  cli.py  mcp_server.py  session.py
bro_engine/graph_store/: __init__.py  edge.py  graph_store.py  schema.sql
bro_engine/otter/: __init__.py  bridge.py  protocol.py
skills/: bro.md
tests/graph_store/: test_edge_properties.py
