[project]
name = "bro-engine"
version = "0.1.0"
description = "A contemplative knowledge engine for polysynthetic edge composition"
authors = [{name = "Hallie Larsson"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "psycopg[binary,pool]>=3.1.0",
    "pgvector>=0.2.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "click>=8.0.0",
    "mcp>=1.0.0",
]

[project.scripts]
bro-engine = "bro_engine.cli:main"
edge = "bro_engine.cli:main"
bro-engine-mcp = "bro_engine.mcp_server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "hypothesis>=6.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["bro_engine*"]
